--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>Portfolio</title>
+    <link rel="icon" type = "image/x-icon" href = "favicon.ico"> 
     <link href="assets/css/style.css" rel="stylesheet">
     <script src="assets/js/highlightSelected.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.js"
