--- a/timeline.html
+++ b/timeline.html
@@ -61,7 +61,7 @@
                 <figure class="gallery__item">
                     <img src="assets/images/timeline/jeju.jpeg" class="photo">
                     <img src="assets/images/timeline/jeju2.jpeg" class="photo">
-                    <figcaption><span class = "timeline">January, 2021 ~ November, 2021</span> <br><br>After finishing one and a half years of military duty, I joined an IT company as a <span>QA tester(engineer)</span>. I had an opportunity to go for a business trip at the last month at this company. I used the app I was testing to shoot 3D dollhouses of accommodations in <span>JeJu Island</span>.
+                    <figcaption><span class = "timeline">January, 2021 ~ November, 2021</span> <br><br>After finishing one and a half years of military duty, I joined an IT company as a <span>QA tester(engineer)</span>. I had an opportunity to go for a business trip at the last month at this company. I used the app I was testing to shoot 3D dollhouses of accommodations in <span>Jeju Island</span>.
                     </figcaption>
                 </figure>
                 <figure class="gallery__item">
