--- a/profile.html
+++ b/profile.html
@@ -20,7 +20,7 @@
 
 <body>
     <h1>My Profile
-        <img id="logo" src="assets/images/logo/profile.jpeg" style="filter: invert();">
+        <!-- <img id="logo" src="assets/images/logo/profile.jpeg" style="filter: invert();"> -->
         <dl class="navLinks">
         </dl>
     </h1>
