implementing upload photo feature

--- a/algorithm.html
+++ b/algorithm.html
@@ -28,8 +28,8 @@
     <div id=grid>
         <div id=column>
             <ul>
-            <figure class="gallery__item"> <img src="assets/images/algorithm/DFS.png" class="photo">
-                <figcaption><span>Depth-first search (DFS)</span> is an algorithm for traversing a tree. It starts
+            <figure class="gallery__item"> <img src="assets/images/studies/algorithm/DFS.png" class="photo">
+                <figcaption><span>Depth-first search (DFS)</span><br> DFS is an algorithm for traversing a tree. It starts
                     traversing from the root node and explores as far as possible along each branch before backtracking.
                     Usually uses <span>stack</span> to find the shortest path. In general, DFS is faster than
                     BFS.<br><span>Time complexity: </span> O(V+E)</figcaption>
@@ -37,8 +37,8 @@
             </ul>
             <ul>
             <figure class="gallery__item">
-                <img src="assets/images/algorithm/BFS.png" class="photo">
-                <figcaption><span>Breadth-first search (BFS)</span> is an algorithm for searching a tree. It starts
+                <img src="assets/images/studies/algorithm/BFS.png" class="photo">
+                <figcaption><span>Breadth-first search (BFS)</span><br> BFS is an algorithm for searching a tree. It starts
                     traversing from the root node and explores all nodes at the present depth prior to moving on to the
                     nodes at the next depth level. Extra memory, usually a <span>queue</span>, is needed to keep track
                     of the child nodes that were encountered but not yet explored. It is usually a better option when
