--- a/assets/navBar.html
+++ b/assets/navBar.html
@@ -8,16 +8,23 @@
     <ul>
         <li><a href="timeline.html">Timeline</a></li>
     </ul>
-    </li>
-<li><a href="applications.html"> Applications</a>
+</li>
+<li><a href="applications.html">Applications</a>
     <ul>
-    <li><a href="games.html"> Tetris</a></li>
+        <li><a href="games.html"> Tetris</a></li>
     </ul>
     <ul>
-    <li><a href="dogScanner.html"> Dog Scanner</a></li>
+        <li><a href="dogScanner.html"> Dog Scanner</a></li>
     </ul>
 </li>
-<li><a href="algorithm.html"> Algorithm</a></li>
+<li><a href="studies.html">Studies</a>
+    <ul>
+        <li><a href="algorithm.html"> Algorithm</a></li>
+    </ul>
+    <ul>
+        <li><a href="ml.html">ML/DL</a></li>
+    </ul>
+</li>
 <div class="burger">
     <span class="bar"></span>
     <span class="bar"></span>
@@ -31,8 +38,8 @@
 
     hamburger.addEventListener("click", mobileMenu);
     function mobileMenu() {
-    hamburger.classList.toggle("active");
-    navMenu.classList.toggle("active");
-    
-}
+        hamburger.classList.toggle("active");
+        navMenu.classList.toggle("active");
+
+    }
 </script>
