--- a/applications.html
+++ b/applications.html
@@ -24,12 +24,12 @@
         <dl class="navLinks">
         </dl>
     </h1>
-    <div id=grid>
+    <!-- <div id=grid> -->
         <div id = "half_column">
             <ul class = "linkWrapper"><div class = link_name><a href="games.html"><img class = "photo_links" src="assets/images/applications/tetris.png"></a>Tetris</div></ul>
             <ul class = "linkWrapper"><div class = link_name><a href="dogScanner.html"><img class = "photo_links" src="assets/images/applications/scanner.png"></a>Dog Scanner</div></ul>
         </div>
-    </div>
+    <!-- </div> -->
     <div class="footer-dark">
     </div>
 </body>
