--- a/studies.html
+++ b/studies.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Photos</title>
+    <title>Studies</title>
     <link href="assets/css/style.css" rel="stylesheet">
     <script src="assets/js/highlightSelected.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.js"
@@ -19,15 +19,15 @@
 </head>
 
 <body>
-    <h1>Photos
-        <img id="logo" src="assets/images/logo/camera.png" style="filter: invert();">
+    <h1>Studies
+        <!-- <img id="logo" src="images/logo/camera.png" style="filter: invert();"> -->
         <dl class="navLinks">
         </dl>
     </h1>
     <!-- <div id=grid> -->
         <div id = "half_column">
-            <ul class = linkWrapper><div class = link_name><a href="rashi.html"><img class = "photo_links" src="assets/images/rashi/Rashi2.jpeg"></a>Rashi</div></ul>
-            <ul class = "linkWrapper"><div class = link_name><a href="timeline.html"><img class = "photo_links" src="assets/images/timeline/jeju2.jpeg"></a>Photo Timeline</div></ul>
+            <ul class = "linkWrapper"><div class = link_name><a href="algorithm.html"><img class = "photo_links" src="assets/images/studies/algorithm/BFS.png"></a>Algorithm</div></ul>
+            <ul class = "linkWrapper"><div class = link_name><a href="ml.html"><img class = "photo_links" src="assets/images/studies/ml/ai.png"></a>ML & DL</div></ul>
         </div>
     <!-- </div> -->
     <div class="footer-dark">
