now accepts all format

--- a/dogScanner.html
+++ b/dogScanner.html
@@ -34,7 +34,7 @@
             <div id="label-container"></div>
             <img id="output_image">
             <br>
-            <input size= 120 type="file" accept="image/*" onchange="preview_image(event)">
+            <input size= 120 type="file" onchange="preview_image(event)">
             <br><br><br>
             <button type="button" class="collapsible">List of the Dogs trained</button>
             <div class="content">
