--- a/dogScanner.html
+++ b/dogScanner.html
@@ -27,14 +27,22 @@
     <div id=scannerWrapper>
         <h2 id="dog-breed">
             </h3>
+            <div id="buttons">
             <button id="scan-button" type="button" onclick="init()">Scan My Dog</button>
+            <button id="upload-button">
+            <label for="input-file">
+                Upload Image
+            </label>
+            <input id = "input-file" type="file" onchange="preview_image(event)">
+            </button>
+            </div>
             <!-- <button id="upload-button" type="button" onclick="checkUploaded()">Scan Uploaded</button> -->
             <div id="loading">loading scanner...</div>
             <div id="webcam-container"></div>
             <div id="label-container"></div>
             <img id="output_image">
             <br>
-            <input size= 120 type="file" onchange="preview_image(event)">
+            
             <br><br><br>
             <button type="button" class="collapsible">List of the Dogs trained</button>
             <div class="content">
@@ -77,6 +85,7 @@
                 labelContainer = document.getElementById("label-container");
                 dogBreed = document.getElementById("dog-breed");
                 uploadButton = document.getElementById("upload-button")
+                imgPreview = document.getElementById("output_image")
                 const flip = false;
 
                 async function preview_image(event) {
@@ -86,9 +95,9 @@
                         output.src = reader.result;
                     }
                     reader.readAsDataURL(event.target.files[0]);
-                    // scanButton.style.display = "none";
-                    // uploadButton.style.display = "flex";
                     var img = document.getElementById('output_image');
+                    img.style.display = "initial";
+                    // webcamContainer.style.display = 'none'
                     model = await tmImage.load(modelURL, metadataURL);
                     const prediction = await model.predict(img, flip);
                     var found = false;
@@ -107,38 +116,17 @@
                         dogBreed.innerHTML = "Found No Match";
                     }
                 }
-                
-                // async function checkUploaded(){
-                //     var img = document.getElementById('output_image');
-                //     model = await tmImage.load(modelURL, metadataURL);
-                //     const prediction = await model.predict(img, flip);
-                //     var found = false;
-                //     maxPredictions = model.getTotalClasses();
-                //     for (let i = 0; i < maxPredictions; i++) {
-                //         const classPrediction =
-                //             console.log(prediction[i].className + ": " + (prediction[i].probability.toFixed(2) * 100) + "%");
-                //         if (prediction[i].probability > 0.9) {
-                //             const dogName = prediction[i].className + ": " + (prediction[i].probability.toFixed(2) * 100) + "%"
-                //             dogBreed.innerHTML = dogName;
-                //             found = true;
-                //         }
-                //     }
-                //     if(!found) {
-                //         dogBreed.innerHTML = "Found No Match";
-                //     }
 
                 // }
                 // Load the image model and setup the webcam
                 async function init() {
-
                     if (scanButton.innerHTML == 'Scan My Dog') {
+                        imgPreview.style.display = 'none';
                         webcam = new tmImage.Webcam(150, 150, flip); // width, height, flip
                         model = await tmImage.load(modelURL, metadataURL);
                         maxPredictions = model.getTotalClasses();
                         await webcam.setup({ facingMode: "environment" });
-                        scanButton.style.borderRadius = "1.75rem 1.75rem 0 0";
-                        scanButton.style.height = "4rem";
-                        scanButton.innerHTML = 'Stop';
+                        scanButton.innerHTML = 'Stop Scanning';
                         loading.style.display = 'flex';
                         // load the model and metadata
                         // Refer to tmImage.loadFromFiles() in the API to support files from a file picker
@@ -178,14 +166,10 @@
                         webcamContainer.innerHTML = "";
                         dogBreed.innerHTML = '';
                         labelContainer.style.display = 'none';
-                        scanButton.style.height = "8.5rem";
                         scanButton.innerHTML = 'Scan My Dog';
-                        scanButton.style.borderRadius = "4rem";
                     }
                     else {
                         scanButton.innerHTML = 'Scan My Dog';
-                        scanButton.style.borderRadius = "4rem";
-                        scanButton.style.height = "8.5rem";
                         webcamContainer.innerHTML = "";
                         labelContainer.style.display = 'none';
                         dogBreed.style.display = 'none';
