--- a/algorithm.html
+++ b/algorithm.html
@@ -12,9 +12,9 @@
         </script>
     <script>
         $(function () {
-            $(".footer-dark").load("assets/footer.html")
-            $(".navLinks").load("assets/navBar.html")
-            $("#header").load("assets/header.html")
+            $(".footer-dark").load("assets/html/footer.html")
+            $(".navLinks").load("assets/html/navBar.html")
+            $("#header").load("assets/html/header.html")
         });
     </script>
     <div id="header"></div>
