--- a/games.html
+++ b/games.html
@@ -17,9 +17,9 @@
         </style>
         <script>
             $(function () {
-                $(".footer-dark").load("assets/footer.html")
-                $(".navLinks").load("assets/navBar.html")
-                $("#header").load("assets/header.html")
+                $(".footer-dark").load("assets/html/footer.html")
+                $(".navLinks").load("assets/html/navBar.html")
+                $("#header").load("assets/html/header.html")
             });
         </script>
         <div id="header"></div>
@@ -50,7 +50,7 @@
 
             </div>
         </div>
-        <script src="tetris.js" type="module">
+        <script src="assets/js/tetris.js" type="module">
         </script>
     </div>
     <div class="footer-dark">
