--- a/ml.html
+++ b/ml.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Machine Learning</title>
+    <title>ML/DL</title>
     <script src="assets/js/highlightSelected.js"></script>
     <link href="assets/css/style.css" rel="stylesheet">
     <script defer src="assets/js/modal.js"></script>
@@ -21,7 +21,7 @@
 </head>
 
 <body class=main>
-    <h1>ML Studies
+    <h1>ML/DL Studies
         <dl class="navLinks">
         </dl>
     </h1>
