fixed Scanner throttling issue

--- a/assets/html/navBar.html
+++ b/assets/html/navBar.html
@@ -24,6 +24,9 @@
     <ul>
         <li><a href="ml.html">ML/DL</a></li>
     </ul>
+    <ul>
+        <li><a href="dog_model.html">Dog Model</a></li>
+    </ul>
 </li>
 <div class="burger">
     <span class="bar"></span>
