mobile keyboard is implemented

--- a/games.html
+++ b/games.html
@@ -7,7 +7,7 @@
         <title>Tetris</title>
         <link href="assets/css/style.css" rel="stylesheet">
         <!--Pixel font -->
-        <link href="https://fonts.cdnfonts.com/css/karma-2" rel="stylesheet">        
+        <link href="https://fonts.cdnfonts.com/css/karma-2" rel="stylesheet">
         <script src="assets/js/highlightSelected.js"></script>
         <script src="https://code.jquery.com/jquery-3.3.1.js"
             integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous">
@@ -47,6 +47,23 @@
                 <span class=preview>
                     <ul></ul>
                 </span>
+                <div class="mobile_button">
+                    <div>
+                        <button id="left_button"><i class="fa fa-arrow-left"></i></button>
+                    </div>
+                    <div>
+                        <button id="down_button"><i class="fa fa-arrow-down"></i></button>
+                    </div>
+                    <div>
+                        <button id="up_button"><i class="fa fa-arrow-up"></i></button>
+                    </div>
+                    <div>
+                        <button id="right_button"><i class="fa fa-arrow-right"></i></button>
+                    </div>
+                    <div>
+                        <button id="spacebar"><i class="fa fa-angle-double-down"></i></button>
+                    </div>
+                </div>
 
             </div>
         </div>
@@ -57,4 +74,4 @@
     </div>
 </body>
 
-</html>
+</html> 
