pause/resume mute/unmute buttons are added for mobile

--- a/games.html
+++ b/games.html
@@ -37,6 +37,7 @@
                 <span class="game-text">Game-Over!!</span>
                 <button class="game-button">restart
                 </button>
+                <button class="resume-button">Resume</button>
             </div>
             <div class="score"> Score: 0</div>
             <div class="info"> <span class="stage"> Stage: 1</span> <span class="next-level">Next Level: 10</span> <span
@@ -48,6 +49,12 @@
                     <ul></ul>
                 </span>
                 <div class="mobile_button">
+                    <div>
+                        <button id="pause_button"><i class="fa fa-pause"></i></button>
+                    </div>
+                    <div>
+                        <button id="mute_button">M</button>
+                    </div>
                     <div>
                         <button id="left_button"><i class="fa fa-arrow-left"></i></button>
                     </div>
