--- a/games.html
+++ b/games.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<body>
-
+<body id = "tetris-body">
     <head>
         <title>Tetris</title>
         <link href="assets/css/style.css" rel="stylesheet">
@@ -77,7 +76,9 @@
         <script src="assets/js/tetris.js" type="module">
         </script>
     </div>
-    <div class="footer-dark">
+    <div class="tetris-footer">
+        <div class="footer-dark">
+        </div>
     </div>
 </body>
 
