added Connect 4 game

--- a/assets/html/navBar.html
+++ b/assets/html/navBar.html
@@ -11,10 +11,13 @@
 </li>
 <li><a href="applications.html">Applications</a>
     <ul>
-        <li><a href="games.html"> Tetris</a></li>
+        <li><a href="tetris.html"> Tetris</a></li>
     </ul>
     <ul>
         <li><a href="dogScanner.html"> Dog Scanner</a></li>
+    </ul>
+    <ul>
+        <li><a href="connect4.html">Connect4</a></li>
     </ul>
 </li>
 <li><a href="studies.html">Studies</a>
