modified design, enhanced ai

--- a/connect4.html
+++ b/connect4.html
@@ -28,6 +28,12 @@
     <div id=grid>
         <div>
             <h1 id = "player">Player1's turn</h1>
+            <button id = "two_player">
+                vs. Friend
+            </span>
+            <button id = "single_player">
+                vs. AI
+            </button>
             <span class = pick_line>
                 <ul></ul>
             </span>
