--- a/connect4.html
+++ b/connect4.html
@@ -21,10 +21,11 @@
         </script>
         <div id="header"></div>
     </head>
-    <h1 >Connect4 Game
-        <dl class="navLinks">
-        </dl>
+    <h1 class = "title">Connect4 Game
     </h1>
+    <dl class="navLinks">
+    </dl>
+   
     <div id=grid>
         <div>
             <h1 id = "player">Player1's turn</h1>
