--- a/tetris.html
+++ b/tetris.html
@@ -23,11 +23,12 @@
         </script>
         <div id="header"></div>
     </head>
-    <h1 style="font-family: karma;">Tetris
+    <h1 >Tetris
         <img id="logo" src="assets/images/logo/game.png">
-        <dl class="navLinks">
-        </dl>
+        
     </h1>
+    <dl class="navLinks">
+    </dl>
     <div id=grid>
         <div class="wrapper">
             <div class="tetris">Tetris
