--- a/connect4.html
+++ b/connect4.html
@@ -28,7 +28,7 @@
    
     <div id=grid>
         <div>
-            <h1 id = "player">Player1's turn</h1>
+            <div id = "player">Player1's turn</div>
             <button id = "two_player">
                 vs. Friend
             </span>
