--- a/connect4.html
+++ b/connect4.html
@@ -1,48 +1,52 @@
 <!DOCTYPE html>
 <html>
 
-<body id="tetris-body">
-
-    <head>
-        <title>Games</title>
-        <link href="assets/css/style.css" rel="stylesheet">
-        <!--Pixel font -->
-        <link href="https://fonts.cdnfonts.com/css/karma-2" rel="stylesheet">
-        <script src="assets/js/highlightSelected.js"></script>
-        <script src="https://code.jquery.com/jquery-3.3.1.js"
-            integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous">
-            </script>
-        <script>
-            $(function () {
-                $(".footer-dark").load("assets/html/footer.html")
-                $(".navLinks").load("assets/html/navBar.html")
-                $("#header").load("assets/html/header.html")
-            });
+<head>
+    <title>Games</title>
+    <link href="assets/css/style.css" rel="stylesheet">
+    <!--Pixel font -->
+    <link href="https://fonts.cdnfonts.com/css/karma-2" rel="stylesheet">
+    <script src="assets/js/highlightSelected.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.js"
+        integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous">
         </script>
-        <div id="header"></div>
-    </head>
-    <h1 class = "title">Connect4 Game
-    </h1>
-    <dl class="navLinks">
-    </dl>
-   
+    <script>
+        $(function () {
+            $(".footer-dark").load("assets/html/footer.html")
+            $(".navLinks").load("assets/html/navBar.html")
+            $("#header").load("assets/html/header.html")
+        });
+    </script>
+    <div id="header"></div>
+</head>
+<h1 class="title">Connect4 Game
+</h1>
+<dl class="navLinks">
+</dl>
+
+<body id="tetris-body">
     <div id=grid>
         <div>
-            <div id = "player">Player1's turn</div>
-            <button id = "two_player">
-                vs. Friend
-            </span>
-            <button id = "single_player">
-                vs. AI
-            </button>
-            <span class = pick_line>
+            <div id="player">Player1's turn</div>
+            <div>
+                <button id="two_player">
+                    vs. Friend
+                </button>
+                <button id="single_player">
+                    vs. AI
+                </button>
+                <span class="game-text"></span>
+                <button class="game-button">restart
+                </button>
+            </div>
+            <span class=pick_line>
                 <ul></ul>
             </span>
             <span class="connect4">
                 <ul></ul>
             </span>
         </div>
-        <script src = "assets/js/connect4.js">
+        <script src="assets/js/connect4.js">
         </script>
     </div>
     <div class="tetris-footer">
