added loading screen on dog scanner & changed UI

--- a/dogScanner.html
+++ b/dogScanner.html
@@ -37,7 +37,7 @@
                 </button>
             </div>
             <!-- <button id="upload-button" type="button" onclick="checkUploaded()">Scan Uploaded</button> -->
-            <div id="loading">loading scanner...</div>
+            <div id="spinner"></div>
             <div id="webcam-container"></div>
             <div id="label-container"></div>
             <img id="output_image">
