--- a/applications.html
+++ b/applications.html
@@ -29,6 +29,8 @@
         <div id = "half_column">
             <ul class = "linkWrapper"><div class = link_name><a href="tetris.html"><img class = "photo_links" src="assets/images/applications/tetris.png"></a>Tetris</div></ul>
             <ul class = "linkWrapper"><div class = link_name><a href="dogScanner.html"><img class = "photo_links" src="assets/images/applications/scanner.png"></a>Dog Scanner</div></ul>
+            <ul class = "linkWrapper"><div class = link_name><a href="connect4.html"><img class = "photo_links" src="assets/images/applications/connect4.png"></a>Connect4</div></ul>
+
         </div>
     <!-- </div> -->
     <div class="footer-dark">
