Changed UI overall, vs. friend or AI option is implemented for connect4

--- a/dogScanner.html
+++ b/dogScanner.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
-
 <body>
-
     <head>
         <title>Dog Scanner</title>
         <link href="assets/css/style.css" rel="stylesheet">
+        <link href="assets/css/dogScanner.css" rel="stylesheet">
         <script src="assets/js/highlightSelected.js"></script>
         <script src="https://code.jquery.com/jquery-3.3.1.js"
             integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous">
@@ -36,7 +35,6 @@
                     <input id="input-file" type="file" onchange="preview_image(event)">
                 </button>
             </div>
-            <!-- <button id="upload-button" type="button" onclick="checkUploaded()">Scan Uploaded</button> -->
             <div id="spinner"></div>
             <div id="webcam-container"></div>
             <div id="label-container"></div>
