--- a/connect4.html
+++ b/connect4.html
@@ -4,8 +4,8 @@
 <head>
     <title>Games</title>
     <link href="assets/css/style.css" rel="stylesheet">
+    <link href="assets/css/connect4.css" rel="stylesheet">
     <!--Pixel font -->
-    <link href="https://fonts.cdnfonts.com/css/karma-2" rel="stylesheet">
     <script src="assets/js/highlightSelected.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.js"
         integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous">
@@ -29,12 +29,14 @@
         <div>
             <div id="player">Player1's turn</div>
             <div>
-                <button id="two_player">
-                    vs. Friend
-                </button>
-                <button id="single_player">
-                    vs. AI
-                </button>
+                <div id=buttons>
+                    <button id="two_player" onclick="two_player()">
+                        vs. Friend
+                    </button>
+                    <button id="single_player" onclick="single_player()">
+                        vs. AI
+                    </button>
+                </div>
                 <span class="game-text"></span>
                 <button class="game-button">restart
                 </button>
