--- a/tetris.html
+++ b/tetris.html
@@ -5,6 +5,7 @@
     <head>
         <title>Tetris</title>
         <link href="assets/css/style.css" rel="stylesheet">
+        <link href="assets/css/tetris.css" rel="stylesheet">
         <!--Pixel font -->
         <link href="https://fonts.cdnfonts.com/css/karma-2" rel="stylesheet">
         <script src="assets/js/highlightSelected.js"></script>
