--- a/connect4.html
+++ b/connect4.html
@@ -30,10 +30,10 @@
             <div id="player">Player1's turn</div>
             <div>
                 <div id=buttons>
-                    <button id="two_player" onclick="two_player()">
+                    <button id="two_player" onclick="getMatchType('twoP')">
                         vs. Friend
                     </button>
-                    <button id="single_player" onclick="single_player()">
+                    <button id="single_player" onclick="getMatchType('singleP')">
                         vs. AI
                     </button>
                 </div>
