--- a/dogScanner.html
+++ b/dogScanner.html
@@ -35,7 +35,7 @@
                     <input id="input-file" type="file" onchange="preview_image(event)">
                 </button>
             </div>
-            <div id="spinner"></div>
+            <div class="spinner"></div>
             <div id="webcam-container"></div>
             <div id="label-container"></div>
             <img id="output_image">
