--- a/rashi.html
+++ b/rashi.html
@@ -5,7 +5,7 @@
     <title>Rashi</title>
     <link href="assets/css/style.css" rel="stylesheet">
     <script defer src="assets/js/modal.js"></script>
-    <script src = "assets/js/loader.js"></script>
+    <script src="assets/js/loader.js"></script>
     <script src="assets/js/highlightSelected.js"></script>
     <script async src="https://kit.fontawesome.com/6cc05e1e8e.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.js"
@@ -32,46 +32,47 @@
         <div id=grid>
             <span id=column>
                 <figure class="gallery__item">
-                    <div class = "spinner" style = "display:flex">
-                        <img src="assets/images/rashi/Rashi1.jpeg" class="photo"  onload = "removeLoader(src)">
+                    <div class="spinner" style="display:flex">
+                        <img src="assets/images/rashi/Rashi1.jpeg" class="photo" onload="removeLoader(src)">
                     </div>
                     <figcaption>Rashi joined our family on January 15th, 2021, from a dog shelter. She has a very
                         careful character. Her estimated birthday is December, 2020.
                     </figcaption>
                 </figure>
                 <figure class="gallery__item">
-                    <div class = "spinner" style = "display:flex">
-                    <img src="assets/images/rashi/Rashi3.jpeg" class="photo" onload="removeLoader(src)">
+                    <div class="spinner" style="display:flex">
+                        <img src="assets/images/rashi/Rashi3.jpeg" class="photo" onload="removeLoader(src)">
                     </div>
                     <figcaption>On the first day she came to our place, it took quite awhile for her to come out of the
                         cage.
                     </figcaption>
                 </figure>
                 <figure class="gallery__item">
-                    <div class = "spinner" style = "display:flex"> 
-                    <img src="assets/images/rashi/Rashi2.jpeg" class="photo" onload="removeLoader(src)">
-                </div>
+                    <div class="spinner" style="display:flex">
+                        <img src="assets/images/rashi/Rashi2.jpeg" class="photo" onload="removeLoader(src)">
+                    </div>
                     <figcaption>First thing we did for her was to shave off her untrimmed hair. Her thigh looked like a
                         chicken thigh ever since then.
                     </figcaption>
                 </figure>
                 <figure class="gallery__item">
-                    <div class = "spinner" style = "display:flex">
-                    <img src="assets/images/rashi/Rashi.jpeg" class="photo" onload="removeLoader(src)">
-                </div>
-                    <figcaption>Later she got used to living in a new place with a new family. She even joins our family trips, including one to the beach.
+                    <div class="spinner" style="display:flex">
+                        <img src="assets/images/rashi/Rashi.jpeg" class="photo" onload="removeLoader(src)">
+                    </div>
+                    <figcaption>Later she got used to living in a new place with a new family. She even joins our family
+                        trips, including one to the beach.
                     </figcaption>
                 </figure>
                 <figure class="gallery__item">
-                    <div class = "spinner" style = "display:flex">
-                    <img src="assets/images/rashi/Rashi4.jpeg" class="photo"onload="removeLoader(src)">
-                </div>
+                    <div class="spinner" style="display:flex">
+                        <img src="assets/images/rashi/Rashi4.jpeg" class="photo" onload="removeLoader(src)">
+                    </div>
                     <figcaption>She seems to be enjoying travelling around with our family!</figcaption>
                 </figure>
                 <figure class="gallery__item">
-                    <div class = "spinner" style = "display:flex">
-                    <img src="assets/images/rashi/Rashi5.jpeg" class="photo" onload="removeLoader(src)">
-                </div>
+                    <div class="spinner" style="display:flex">
+                        <img src="assets/images/rashi/Rashi5.jpeg" class="photo" onload="removeLoader(src)">
+                    </div>
                     <figcaption>Hope she is enjoying her life as a member of our family 😊
                     </figcaption>
                 </figure>
@@ -83,7 +84,7 @@
                         title="YouTube video player" frameborder=""
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe></div>
-                </span>
+            </span>
         </div>
     </div>
     <div class="footer-dark">
