--- a/assets/html/footer.html
+++ b/assets/html/footer.html
@@ -1,4 +1,5 @@
 <div class="container">
+    <hr class="footer-top" />
     <div class="row">
         <div class="col item social">
             <a href="https://www.facebook.com/jinsang.j.oh/">
