--- a/rashi.html
+++ b/rashi.html
@@ -25,7 +25,7 @@
     <div class=main>
         <h1>
             Rashi
-            <img id="logo" src="assets/images/logo/paw.png" style="filter: invert();">
+            <!-- <img id="logo" src="assets/images/logo/paw.png" style="filter: invert();"> -->
         </h1>
         <dl class="navLinks">
         </dl>
