--- a/timeline.html
+++ b/timeline.html
@@ -24,7 +24,7 @@
 <body>
     <div class=main>
         <h1>Photo Timeline
-            <img id="logo" src="assets/images/logo/scenery.png">
+            <!-- <img id="logo" src="assets/images/logo/scenery.png"> -->
         </h1>
         <dl class="navLinks">
         </dl>
