--- a/ml.html
+++ b/ml.html
@@ -5,6 +5,7 @@
     <title>ML/DL</title>
     <script src="assets/js/highlightSelected.js"></script>
     <link href="assets/css/style.css" rel="stylesheet">
+    <script src = "assets/js/loader.js"></script>
     <script defer src="assets/js/modal.js"></script>
     <script async src="https://kit.fontawesome.com/6cc05e1e8e.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.js"
@@ -28,14 +29,19 @@
     <div id=grid>
         <div id=column>
             <ul>
-            <figure class="gallery__item"><img src="assets/images/studies/ml/basketball.jpg"> 
+            <figure class="gallery__item">
+                <div class="spinner" style="display:flex">
+                <img src="assets/images/studies/ml/basketball.jpg" onload="removeLoader(src)" class="photo"> 
+                </div>
                 <figcaption><span>Classification vs. Regression</span><br> Clasification is used when predicting a label(or a discrete class label) output, when regression is used to predict quantity(continuous quantit) of the output.
                  For example, when I want to predict quantity of icecream sold for each degrees of temperature, it is a regression. When I want to predict the type of ball that has 75cm of circumference, brown in color, and has 620g of weight, it is a classification.</figcaption>
             </figure>
             </ul>
             <ul>
             <figure class="gallery__item">
-                <img src="assets/images/studies/ml/ai.png" class="photo">
+                <div class="spinner" style="display:flex">
+                <img src="assets/images/studies/ml/ai.png" onload="removeLoader(src)"class="photo">
+                </div>
                 <figcaption><span>AI vs. ML vs. DL</span><br>Artificial Intelligence covers all the range human's coginition, ability to learn, and perceptions taught to computer. Machine Learning is a way to teach machine with the past data. ML uses ANN(Artificial Neural Network) to get output. ML is used to process structureed datas like db.
                     Deep Learning is a subcategory of Machine Learning, and it uses multiple layers to get the output. DL is used to process semi-strucutred data such as images, videos, voice or texts.
                 </figcaption>
