--- a/photos.html
+++ b/photos.html
@@ -20,8 +20,7 @@
 
 <body>
     <h1>Photos
-        <img id="logo" src="assets/images/logo/camera.png" style="filter: invert();">
-        </dl>
+        <!-- <img id="logo" src="assets/images/logo/camera.png" style="filter: invert();"> -->
     </h1>
     <dl class="navLinks">
     </dl>
