changed some designs

--- a/assets/html/navBar.html
+++ b/assets/html/navBar.html
@@ -1,5 +1,6 @@
 <script scr="highlightSelected"></script>
-<li><a href="profile.html"> Profile</a></li>
+<li><a href="https://www.linkedin.com/in/james-oh-b41a82215/" target="_black">Profile</a></li>
+<!-- <li><a href="profile.html"> Profile</a></li> -->
 <!-- <li><a href="photos.html"> Photos</a></li> -->
 <li><a href="photos.html"> Photos</a>
     <ul>
