--- a/tetris.html
+++ b/tetris.html
@@ -31,7 +31,7 @@
     <dl class="navLinks">
     </dl>
     <div id=grid>
-        <div class="wrapper">
+        <div class="tetris-body">
             <div class="tetris">Tetris
             </div>
             <div>
