--- a/studies.html
+++ b/studies.html
@@ -24,7 +24,13 @@
     <dl class="navLinks">
     </dl>
         <div id = "half_column">
-            <ul class = "linkWrapper"><div class = link_name><a href="algorithm.html"><img class = "photo_links" src="assets/images/studies/algorithm/BFS.png"></a>Algorithm</div></ul>
+            <ul class = "linkWrapper">
+                <div class = link_name>
+                    <a href="algorithm.html">
+                        <img class = "photo_links" src="assets/images/studies/algorithm/BFS.png">
+                    </a>Algorithm
+                </div>
+                </ul>
             <ul class = "linkWrapper"><div class = link_name><a href="ml.html"><img class = "photo_links" src="assets/images/studies/ml/ai.png"></a>ML & DL</div></ul>
         </div>
     <div class="footer-dark">
